[tool.poetry]
name = "design_partterns_playground"
version = "0.1.0"
description = ""
authors = ["Joao Silva <jpo_silva@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
